--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <div id="header">
     <div class="container">
         <nav>
-            <img src="/images/logo.png" class="logo">
+            <img src="Images/logo.png" class="logo">
             <ul>
                 <li><a href="#header">Home</a></li>
                 <li><a href="#about">About</a></li>
@@ -34,7 +34,7 @@
     <div class="container">
         <div class="row">
             <div class="about-col-1">
-                <img src="/images/user1.png">
+                <img src="Images/user1.png">
             </div>
             <div class="about-col-2">
                 <h1 class="sub-title">About Me</h1>
@@ -51,7 +51,8 @@
                 </div>
                 <div class="tab-contents active-tab" id="skills">
                     <ul>
-                        <li><span>Software Development</span><br>Cybersecurity</li>
+                        <li><span>Software Development</span><br>-Java -Python -C++ -HTML/CSS -JS -MySQL -Assembly</li>
+                        <li><span>Soft</span><br>-Scrum -Debugging -Collaberative Problem Solving -Research and Development</li>
                     </ul>
                 </div>
                 <div class="tab-contents" id="education">
@@ -78,7 +79,7 @@
         <h1 class="sub-title">My Work</h1>
         <div class="work-list">
             <div class="work">
-                <img src="/images/work-1.png">
+                <img src="Images/work-1.png">
                 <div class="layer">
                     <h3>Python Dungeon Crawler</h3>
                     <p>Dungeon crawler game programmed in python made to run on a raspberry pi.</p>
@@ -86,7 +87,7 @@
                 </div>
             </div>
             <div class="work">
-                <img src="/images/work-2.png">
+                <img src="Images/work-2.png">
                 <div class="layer">
                     <h3>LSTM vs LR</h3>
                     <p>Two machine learning algorithms trained and tested in python to find the best fit for stock market prediction.</p>
@@ -94,7 +95,7 @@
                 </div>
             </div>
             <div class="work">
-                <img src="/images/work-3.png">
+                <img src="Images/work-3.png">
                 <div class="layer">
                     <h3>Coming soon</h3>
                     <p></p>
@@ -118,7 +119,7 @@
                     <a href="https://www.linkedin.com/in/andrew-garcia-997a39264/"><i class="fa-brands fa-linkedin"></i></a>
                     <a href="https://github.com/andyg817"><i class="fa-brands fa-github"></i></a>
                 </div>
-                <a href="/images/Andrew Garcia Resume.pdf" download class="btn btn2">Download Resume</a>
+                <a href="Images/Andrew Garcia Resume.pdf" download class="btn btn2">Download Resume</a>
             </div>
             <div class="contact-right">
                 <form name="submit-to-google-sheet">
