--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
                     <ul>
                         <li><span>Software Development</span><br>-Java -Python -C++ -HTML/CSS -JS -MySQL -Assembly</li>
                         <li><span>Soft</span><br>-Scrum -Debugging -Collaberative Problem Solving -Research and Development</li>
+                        <li><span>Areas</span><br>-Backend Development -Frontend Development</li>
                     </ul>
                 </div>
                 <div class="tab-contents" id="education">
