--- a/index.html
+++ b/index.html
@@ -108,26 +108,26 @@
 
         <div class="work-list hidden" id="more-work">
             <div class="work">
-                <img src="Images/c-soon.png">
+                <img src="Images/work-4.png">
                 <div class="layer">
-                    <h3>Project 4</h3>
-                    <p>Coming Soon</p>
-                    <a href="#"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                    <h3>Calorie App</h3>
+                    <p>Calorie Tracker app using django framework and calorie api. Displays nutritional values of foods and excercises needed to burn said calores.</p>
+                    <a href="https://github.com/andyg817/Calorie-app"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                </div>
+            </div>
+            <div class="work">
+                <img src="Images/work-5.png">
+                <div class="layer">
+                    <h3>ExpressSJsolutions</h3>
+                    <p>Freelance website for small cleaning business</p>
+                    <a href="https://andyg817.github.io/Express-Solutions/"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                 </div>
             </div>
             <div class="work">
                 <img src="Images/c-soon.png">
                 <div class="layer">
-                    <h3>Project 5</h3>
-                    <p>Coming Soon</p>
-                    <a href="#"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
-                </div>
-            </div>
-            <div class="work">
-                <img src="Images/c-soon.png">
-                <div class="layer">
-                    <h3>Project 6</h3>
-                    <p>Coming Soon</p>
+                    <h3>Miguels Construction</h3>
+                    <p>Freelance website for construction company</p>
                     <a href="#"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                 </div>
             </div>
